--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,10 +10,9 @@
         android:layout_height="wrap_content"
         android:text="@string/search_button"
         android:id="@+id/btnSearch"
-        android:onClick="onImageSearch"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/gvResults"
+        android:layout_alignEnd="@+id/gvResults" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -30,9 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gvResults"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:numColumns="3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/btnSearch"
-        android:numColumns="3" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
