--- a/app/src/main/res/values/spinner_data.xml
+++ b/app/src/main/res/values/spinner_data.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sp_img_color">
-        <item>Black</item>
-        <item>Blue</item>
-        <item>Brown</item>
-        <item>Gray</item>
-        <item>Green</item>
-        <item>Orange</item>
-        <item>Pink</item>
-        <item>Purple</item>
-        <item>Red</item>
-        <item>Teal</item>
-        <item>White</item>
-        <item>Yellow</item>
+        <item>Any</item>
+        <item>black</item>
+        <item>blue</item>
+        <item>brown</item>
+        <item>gray</item>
+        <item>green</item>
+        <item>orange</item>
+        <item>pink</item>
+        <item>purple</item>
+        <item>red</item>
+        <item>teal</item>
+        <item>white</item>
+        <item>yellow</item>
     </string-array>
 
     <string-array name="sp_img_type">
-        <item>Face</item>
+        <item>Any</item>
+        <item>face</item>
         <item>photo</item>
         <item>clipart</item>
         <item>lineart</item>
     </string-array>
 
     <string-array name="sp_img_sz">
+        <item>Any</item>
         <item>icon</item>
         <item>small</item>
         <item>xxlarge</item>
