--- a/app/src/main/res/layout/activity_image_display.xml
+++ b/app/src/main/res/layout/activity_image_display.xml
@@ -10,10 +10,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ivResult"
-        android:maxWidth="600dp"
         android:src="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:textAlignment="center"
+        android:layout_above="@+id/tvImageName"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/tvImageName"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/abc_secondary_text_material_light"
+        android:maxLines="1" />
 </RelativeLayout>
