--- a/app/src/main/res/layout/item_image_result.xml
+++ b/app/src/main/res/layout/item_image_result.xml
@@ -9,7 +9,8 @@
         android:layout_height="75dp"
         android:id="@+id/ivImage"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,5 +19,8 @@
         android:text="Large Text"
         android:maxLines="2"
         android:ellipsize="end"
-        android:id="@+id/tvTitle" />
+        android:id="@+id/tvTitle"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/abc_secondary_text_material_light"
+        android:textSize="14sp" />
 </LinearLayout>
